# src/controllers/authentication/index.js
@@ -1,8 +1,10 @@
 import express from 'express';
-import { login } from './login';
+import { login, register } from './login';
+import { validateLogin, validator } from './validator';
 
 const authRouter = express.Router();
 
-authRouter.post('/auth/login', login);
+authRouter.post('/auth/register', validator, register);
+authRouter.post('/auth/login', validateLogin, login);
 
 export default authRouter;
