# src/controllers/contacts/index.js
@@ -1,12 +1,16 @@
 import express from 'express';
-import { createContact, deleteContact, getAllContacts } from './contactsController';
-import { validateNewContact } from './contactsValidator';
+import {
+  createContact, deleteContact, getAllContacts, getSingleContact, updateContact,
+} from './contactsController';
+import { validateNewContact, validateContactToUpdate } from './contactsValidator';
 import { authenticate } from '../authentication/authenticate';
 
 const contactsRouter = express.Router();
 
 contactsRouter.get('/contacts', authenticate, getAllContacts);
-contactsRouter.delete('/contacts', authenticate, deleteContact);
-contactsRouter.post('/contacts', validateNewContact, createContact);
+contactsRouter.delete('/contacts/:number', authenticate, deleteContact);
+contactsRouter.put('/contacts/:number', authenticate, validateContactToUpdate, updateContact);
+contactsRouter.get('/contacts/:number', authenticate, getSingleContact, validateNewContact, createContact);
+contactsRouter.post('/contacts', authenticate, validateNewContact, createContact);
 
 export default contactsRouter;
